--- a/queries.css
+++ b/queries.css
@@ -187,12 +187,33 @@
       }
 
       /* gallery */
-      .gallery__imgs{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+      .gallery{
+        width: 100vw;
       }
+      .media-scroller {
+        grid-auto-columns: 50%;
+        width: 90vw;
+      }
+
+      .media-element {
+        grid-template-columns: 30rem;
+        grid-template-rows: 30rem;
+        /* border: solid white 3px; */
+        width: 60%;
+      }
+
+      .media-element > img{
+        height: 100%;
+        width: 100%;
+        /* border: solid red 3px; */
+      }
+      
+
+
+
+
+
+
 
       /* contact */
       .contact{
